[gd_scene load_steps=11 format=3 uid="uid://bdxxnqyrxk04e"]

[ext_resource type="Script" path="res://player/scripts/health_bar.gd" id="1_1fig6"]
[ext_resource type="Script" path="res://player/scripts/player_hud.gd" id="1_7u87w"]
[ext_resource type="Texture2D" uid="uid://dkr0pw0btoksp" path="res://inventory/sprites/inventory_slot.png" id="2_idg8k"]
[ext_resource type="Script" path="res://player/scripts/ammo_indicator.gd" id="4_8psay"]
[ext_resource type="PackedScene" uid="uid://dcm0rxa7wl85t" path="res://ui/pause_menu/death_screen.tscn" id="4_mdrqq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t7j8m"]
bg_color = Color(0.203922, 0.203922, 0.317647, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ougiu"]
bg_color = Color(0.545098, 0.0941176, 0.12549, 1)

[sub_resource type="GDScript" id="GDScript_wbga3"]
script/source = "extends HBoxContainer
"

[sub_resource type="LabelSettings" id="LabelSettings_sc3hn"]
font_size = 32
font_color = Color(0.400698, 0.400698, 0.400698, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eojwm"]
bg_color = Color(0.203922, 0.203922, 0.317647, 0.501961)

[node name="PlayerHUD" type="CanvasLayer" node_paths=PackedStringArray("weapon_slots", "ammo_indicator")]
script = ExtResource("1_7u87w")
weapon_slots = [NodePath("PlayerHUD/HBoxContainer/AspectRatioContainer2/AspectRatioContainer"), NodePath("PlayerHUD/HBoxContainer/AspectRatioContainer/AspectRatioContainer")]
ammo_indicator = NodePath("PlayerHUD/AmmoIndicator")

[node name="PlayerHUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -876.0
offset_top = -174.0
offset_right = -582.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 0

[node name="HealthBar" type="ProgressBar" parent="PlayerHUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -155.0
offset_top = -26.0
offset_right = 328.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_t7j8m")
theme_override_styles/fill = SubResource("StyleBoxFlat_ougiu")
rounded = true
script = ExtResource("1_1fig6")

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerHUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -142.0
offset_top = -2.0
offset_right = 62.0
offset_bottom = 93.0
grow_horizontal = 2
script = SubResource("GDScript_wbga3")
metadata/_edit_group_ = true

[node name="AspectRatioContainer2" type="Control" parent="PlayerHUD/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
metadata/_edit_group_ = true

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="PlayerHUD/HBoxContainer/AspectRatioContainer2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)

[node name="Frame" type="TextureRect" parent="PlayerHUD/HBoxContainer/AspectRatioContainer2/AspectRatioContainer"]
layout_mode = 2
texture = ExtResource("2_idg8k")

[node name="Icon" type="TextureRect" parent="PlayerHUD/HBoxContainer/AspectRatioContainer2/AspectRatioContainer"]
layout_mode = 2

[node name="AspectRatioContainer" type="Control" parent="PlayerHUD/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
metadata/_edit_group_ = true

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="PlayerHUD/HBoxContainer/AspectRatioContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)

[node name="Frame" type="TextureRect" parent="PlayerHUD/HBoxContainer/AspectRatioContainer/AspectRatioContainer"]
layout_direction = 1
layout_mode = 2
texture = ExtResource("2_idg8k")

[node name="Icon" type="TextureRect" parent="PlayerHUD/HBoxContainer/AspectRatioContainer/AspectRatioContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PlayerHUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 110.0
offset_top = -2.0
offset_right = 314.0
offset_bottom = 93.0
grow_horizontal = 2
script = SubResource("GDScript_wbga3")
metadata/_edit_group_ = true

[node name="AspectRatioContainer2" type="Control" parent="PlayerHUD/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
metadata/_edit_group_ = true

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="PlayerHUD/HBoxContainer2/AspectRatioContainer2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)

[node name="TextureRect2" type="TextureRect" parent="PlayerHUD/HBoxContainer2/AspectRatioContainer2/AspectRatioContainer"]
layout_mode = 2
texture = ExtResource("2_idg8k")

[node name="Icon" type="TextureRect" parent="PlayerHUD/HBoxContainer2/AspectRatioContainer2/AspectRatioContainer"]
layout_mode = 2

[node name="AspectRatioContainer" type="Control" parent="PlayerHUD/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
metadata/_edit_group_ = true

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="PlayerHUD/HBoxContainer2/AspectRatioContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)

[node name="TextureRect2" type="TextureRect" parent="PlayerHUD/HBoxContainer2/AspectRatioContainer/AspectRatioContainer"]
layout_direction = 1
layout_mode = 2
texture = ExtResource("2_idg8k")

[node name="TextureRect" type="TextureRect" parent="PlayerHUD/HBoxContainer2/AspectRatioContainer/AspectRatioContainer"]
layout_mode = 2

[node name="AmmoIndicator" type="HBoxContainer" parent="PlayerHUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.272
anchor_top = -0.44
anchor_right = 0.272
anchor_bottom = -0.44
offset_left = -73.968
offset_top = -19.0
offset_right = 37.032
offset_bottom = 34.0
alignment = 1
script = ExtResource("4_8psay")

[node name="MagazineAmmo" type="Label" parent="PlayerHUD/AmmoIndicator"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "1"

[node name="Devider" type="VSeparator" parent="PlayerHUD/AmmoIndicator"]
visible = false
layout_mode = 2

[node name="ExtraAmmo" type="Label" parent="PlayerHUD/AmmoIndicator"]
visible = false
layout_mode = 2
text = "1000"
label_settings = SubResource("LabelSettings_sc3hn")

[node name="CacheIndicator" type="HBoxContainer" parent="PlayerHUD"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.068
offset_top = -878.0
offset_right = 150.008
offset_bottom = -801.0

[node name="cache" type="Label" parent="PlayerHUD/CacheIndicator"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.121569, 0.729412, 0.309804, 1)
theme_override_font_sizes/font_size = 48
text = "---"
horizontal_alignment = 2
vertical_alignment = 1

[node name="cacheIcon" type="Label" parent="PlayerHUD/CacheIndicator"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.121569, 0.729412, 0.309804, 1)
theme_override_font_sizes/font_size = 48
text = " $"
vertical_alignment = 1

[node name="LevelBar" type="HBoxContainer" parent="PlayerHUD"]
layout_mode = 0
offset_left = 1050.0
offset_top = 80.0
offset_right = 1808.0
offset_bottom = 145.0
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerHUD/LevelBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LevelText" type="Label" parent="PlayerHUD/LevelBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 32
text = "Lv"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level" type="Label" parent="PlayerHUD/LevelBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "1"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PlayerHUD/LevelBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.0
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="ProgressBar" type="ProgressBar" parent="PlayerHUD/LevelBar/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_eojwm")

[node name="WaveIndicator" type="HBoxContainer" parent="PlayerHUD"]
layout_mode = 2
offset_left = 1506.0
offset_top = -878.0
offset_right = 1782.0
offset_bottom = -801.0
grow_horizontal = 2
grow_vertical = 2

[node name="WaveText" type="Label" parent="PlayerHUD/WaveIndicator"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
theme_override_font_sizes/font_size = 48
text = "Wave "
horizontal_alignment = 2
vertical_alignment = 1

[node name="WaveNumber" type="Label" parent="PlayerHUD/WaveIndicator"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 48
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeathScreen" parent="." instance=ExtResource("4_mdrqq")]
visible = false
script = null
